# APITesting

./: .gitignore
AsioSocket/: CMakeLists.txt
AsioSocket/AsioSocket/: AsioSocketTest.cpp  AsioSocketTest.h  CMakeLists.txt  HttpConnectio.cpp  HttpConnection.h
RestApiTest/: RestApiTest.sln
RestApiTest/RestApiTest/: Program.cs
RestApiTest/RestApiTest/Properties/: launchSettings.json
SocketTest/: CMakeLists.txt
SocketTest/SocketTest/: CMakeLists.txt  SocketTest.cpp  SocketTest.h
SocketTest/SocketTest/Networking/: HttpResponder.cpp  HttpResponder.h  HttpStatusCode.h  TcpListener.cpp  TcpListener.h
